commenting and cleaning up

--- a/classification_model.ipynb
+++ b/classification_model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This notebook was used for the development of classification models to fit dancer data into dances to specific songs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1107,7 +1114,7 @@
     }
    ],
    "source": [
-    "print(\"LINEAR REGRESSION\")\n",
+    "print(\"CLASSIFICATION ACCURACY\")\n",
     "print(\"Train Score: \")\n",
     "print(r2_score(trainLabelNums, ypred_train))\n",
     "print(\"Test Score: \")\n",
@@ -1153,275 +1160,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing integration with recommend.py pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import argparse\n",
-    "import logging\n",
-    "import spotipy\n",
-    "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "from spotipy.oauth2 import SpotifyOAuth\n",
-    "import math\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from os.path import exists\n",
-    "import re\n",
-    "import tsfresh\n",
-    "from tsfresh.feature_extraction import MinimalFCParameters\n",
-    "\n",
-    "#Initialize Spotify Client\n",
-    "logger = logging.getLogger()\n",
-    "logging.basicConfig()\n",
-    "CLIENT_ID=\"9793440f0a5047c59c70bcfcf91ad589\"\n",
-    "CLIENT_SECRET= \"b66dc3a5f9f34207bebee32a25745368\"\n",
-    "REDIRECT_URL=\"http://localhost/\"\n",
-    "client_credentials_manager = SpotifyClientCredentials(client_id = CLIENT_ID, client_secret = CLIENT_SECRET)\n",
-    "oAuth = SpotifyOAuth(client_id = CLIENT_ID, client_secret = CLIENT_SECRET, redirect_uri = REDIRECT_URL, scope = 'user-modify-playback-state')\n",
-    "sp = spotipy.Spotify(auth_manager =oAuth)\n",
-    "\n",
-    "song_artist_pairs = {\n",
-    "    '1':('thats_what_i_like','bruno_mars'),\n",
-    "    '2':('humble','kendrick_lamar'),\n",
-    "    '3':('skeletons','keshi'),\n",
-    "    '4':('slow_dancing_in_the_dark','joji'),\n",
-    "    '5':('lite_spots','kaytranada'),\n",
-    "    '6':('woman','doja_cat'),\n",
-    "    '7':('get_up','ciara'),\n",
-    "    '8':('throwin_elbows','excision'),\n",
-    "    '9':('power','little mix'),\n",
-    "    '10':('peaches','justin_bieber'),\n",
-    "    '11':('knife_talk','drake'),\n",
-    "    '12':('fool_around','yas'),\n",
-    "    '13':('levitating','dua_lipa'),\n",
-    "    '14':('feed_the_fire','lucky_daye'),\n",
-    "    '15':('easily','bruno_major'),\n",
-    "    '16':('good_4_u','olivia_rodrigo'),\n",
-    "    '17':('all_i_wanna_do','jay_park'),\n",
-    "    '18':('sad_girlz_luv_money','amaarae'),\n",
-    "    '19':('tik_tok','kesha'),\n",
-    "    '20':('ymca','village_people'),\n",
-    "    '21':('intuition_interlude','jamie_foxx'),\n",
-    "    '22':('kilby_girl','the_backseat_lovers'),\n",
-    "    '23':('a_thousand_miles','vanessa_carlton'),\n",
-    "    '24':('jupiter_love', 'trey_songz'),\n",
-    "    '25':('kilby_girl', 'backseat_lovers')\n",
-    "}\n",
-    "\n",
-    "def get_song(name_song, name_artist):\n",
-    "    results = sp.search(q=name_song + ' '+name_artist, type='track')\n",
-    "    items = results['tracks']['items']\n",
-    "    if len(items) > 0:\n",
-    "        return items[0]\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "def show_recommendations_for_song(song):\n",
-    "    results = sp.recommendations(seed_tracks=[song['id']], limit=5)\n",
-    "    print(\"Recommendations:\")\n",
-    "    for track in results['tracks']:\n",
-    "        print(\"TRACK: \",track['name'], \" - \",track['artists'][0]['name'])\n",
-    "       # sp.add_to_queue(track['uri'])\n",
-    "\n",
-    "def split_ele(x):\n",
-    "    a = np.array(re.findall(r\"[-+]?\\d*\\.?\\d+|[-+]?\\d+\", x))\n",
-    "    return a.astype(float)\n",
-    "\n",
-    "def preprocess(file_name):\n",
-    "    num_features = 10\n",
-    "    num_nodes = 14\n",
-    "    num_samples = 10\n",
-    "    pose_landmark_subset = ['LEFT_EYE_OUTER', 'RIGHT_EYE_OUTER', 'LEFT_SHOULDER', 'RIGHT_SHOULDER', 'LEFT_ELBOW', 'RIGHT_ELBOW', 'LEFT_WRIST', 'RIGHT_WRIST', 'LEFT_HIP', 'RIGHT_HIP','LEFT_KNEE', 'RIGHT_KNEE', 'LEFT_ANKLE', 'RIGHT_ANKLE']\n",
-    "    df_columns = ['LEFT_EYE_OUTER_POS', 'LEFT_EYE_OUTER_DIST', 'RIGHT_EYE_OUTER_POS', 'RIGHT_EYE_OUTER_DIST', 'LEFT_SHOULDER_POS', 'LEFT_SHOULDER_DIST', 'RIGHT_SHOULDER_POS', 'RIGHT_SHOULDER_DIST', 'LEFT_ELBOW_POS', 'LEFT_ELBOW_DIST', 'RIGHT_ELBOW_POS', 'RIGHT_ELBOW_DIST', 'LEFT_WRIST_POS', 'LEFT_WRIST_DIST', 'RIGHT_WRIST_POS', 'RIGHT_WRIST_DIST', 'LEFT_HIP_POS', 'LEFT_HIP_DIST', 'RIGHT_HIP_POS', 'RIGHT_HIP_DIST', 'LEFT_KNEE_POS', 'LEFT_KNEE_DIST', 'RIGHT_KNEE_POS', 'RIGHT_KNEE_DIST', 'LEFT_ANKLE_POS', 'LEFT_ANKLE_DIST', 'RIGHT_ANKLE_POS', 'RIGHT_ANKLE_DIST']\n",
-    "    df = pd.read_csv(file_name, sep = ',', usecols=[4, 7, 12, 13, 14, 15, 16, 17, 24, 25, 26, 27, 28, 29])\n",
-    "    splitDf = df\n",
-    "    x_data = pd.DataFrame(columns=df_columns, index=range(len(df)))\n",
-    "    y_data = pd.DataFrame(columns=df_columns, index=range(len(df)))\n",
-    "    for node in pose_landmark_subset:\n",
-    "        curr = df[node]\n",
-    "        vals = [split_ele(x) for x in curr]\n",
-    "        for row in range(len(vals)):\n",
-    "            colname_pos = node + \"_POS\"\n",
-    "            colname_dist = node + \"_DIST\"\n",
-    "            if(row == 0):\n",
-    "                x_data[colname_dist][row] = 0\n",
-    "                y_data[colname_dist][row] = 0\n",
-    "            else:\n",
-    "                x_data[colname_dist][row] = vals[row][0] - vals[row-1][0]\n",
-    "                y_data[colname_dist][row] = vals[row][1] - vals[row-1][1]\n",
-    "            x_data[colname_pos][row] = vals[row][0]\n",
-    "            y_data[colname_pos][row] = vals[row][1]\n",
-    "    return [x_data, y_data]\n",
-    "\n",
-    "def parse(x_data, y_data):\n",
-    "    num_features = 10\n",
-    "    num_nodes = 14\n",
-    "    num_samples = 10\n",
-    "    df_columns = ['LEFT_EYE_OUTER_POS', 'LEFT_EYE_OUTER_DIST', 'RIGHT_EYE_OUTER_POS', 'RIGHT_EYE_OUTER_DIST', 'LEFT_SHOULDER_POS', 'LEFT_SHOULDER_DIST', 'RIGHT_SHOULDER_POS', 'RIGHT_SHOULDER_DIST', 'LEFT_ELBOW_POS', 'LEFT_ELBOW_DIST', 'RIGHT_ELBOW_POS', 'RIGHT_ELBOW_DIST', 'LEFT_WRIST_POS', 'LEFT_WRIST_DIST', 'RIGHT_WRIST_POS', 'RIGHT_WRIST_DIST', 'LEFT_HIP_POS', 'LEFT_HIP_DIST', 'RIGHT_HIP_POS', 'RIGHT_HIP_DIST', 'LEFT_KNEE_POS', 'LEFT_KNEE_DIST', 'RIGHT_KNEE_POS', 'RIGHT_KNEE_DIST', 'LEFT_ANKLE_POS', 'LEFT_ANKLE_DIST', 'RIGHT_ANKLE_POS', 'RIGHT_ANKLE_DIST']\n",
-    "    curr_extracted_vector = pd.DataFrame()\n",
-    "    for col in df_columns:\n",
-    "        col_x = x_data[col]\n",
-    "        col_y = y_data[col]\n",
-    "        xname = col + \"_x\"\n",
-    "        yname = col + \"_y\"\n",
-    "        settings = {\n",
-    "            xname: {\n",
-    "                \"kurtosis\": None, \n",
-    "                \"standard_deviation\": None, \n",
-    "                \"autocorrelation\": [{\"lag\": 10}],\n",
-    "                \"approximate_entropy\": [{\"m\": 20, \"r\": 0.05}],\n",
-    "                \"c3\": [{\"lag\": 10}],\n",
-    "                \"cid_ce\": [{\"normalize\": True}]\n",
-    "            }, \n",
-    "            yname: {\n",
-    "                \"kurtosis\": None, \n",
-    "                \"standard_deviation\": None, \n",
-    "                \"autocorrelation\": [{\"lag\": 10}],\n",
-    "                \"approximate_entropy\": [{\"m\": 20, \"r\": 0.05}],\n",
-    "                \"c3\": [{\"lag\": 10}],\n",
-    "                \"cid_ce\": [{\"normalize\": True}]\n",
-    "            }\n",
-    "        }\n",
-    "        comb = pd.DataFrame(data=[col_x, col_y], index=[xname, yname]).T\n",
-    "        comb.rename_axis(\"time\")\n",
-    "        comb[\"id\"] = 1\n",
-    "        comb[\"time\"] = comb.index\n",
-    "        curr_extracted = tsfresh.extract_features(comb, column_id = \"id\", column_sort=\"time\", column_kind=None, column_value=None, kind_to_fc_parameters=settings, disable_progressbar=True)\n",
-    "        curr_extracted_vector = pd.concat([curr_extracted_vector, curr_extracted], axis=1)\n",
-    "    return curr_extracted_vector\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   LEFT_EYE_OUTER_POS_x__kurtosis  LEFT_EYE_OUTER_POS_x__standard_deviation  \\\n",
-      "1                       -0.410967                                  29.21189   \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_x__autocorrelation__lag_10  \\\n",
-      "1                                       0.856036   \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_x__approximate_entropy__m_20__r_0.05  \\\n",
-      "1                                           0.003044         \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_x__c3__lag_10  \\\n",
-      "1                      2.593899e+07   \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_x__cid_ce__normalize_True  \\\n",
-      "1                                      1.900336   \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_y__kurtosis  LEFT_EYE_OUTER_POS_y__standard_deviation  \\\n",
-      "1                        3.433046                                  27.03163   \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_y__autocorrelation__lag_10  \\\n",
-      "1                                       0.539879   \n",
-      "\n",
-      "   LEFT_EYE_OUTER_POS_y__approximate_entropy__m_20__r_0.05  ...  \\\n",
-      "1                                           0.003044        ...   \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_x__autocorrelation__lag_10  \\\n",
-      "1                                     0.014317   \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_x__approximate_entropy__m_20__r_0.05  \\\n",
-      "1                                           0.003044       \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_x__c3__lag_10  RIGHT_ANKLE_DIST_x__cid_ce__normalize_True  \\\n",
-      "1                       -0.569106                                   26.400881   \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_y__kurtosis  RIGHT_ANKLE_DIST_y__standard_deviation  \\\n",
-      "1                      27.44177                                6.099799   \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_y__autocorrelation__lag_10  \\\n",
-      "1                                    -0.047978   \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_y__approximate_entropy__m_20__r_0.05  \\\n",
-      "1                                           0.003044       \n",
-      "\n",
-      "   RIGHT_ANKLE_DIST_y__c3__lag_10  RIGHT_ANKLE_DIST_y__cid_ce__normalize_True  \n",
-      "1                       -1.057449                                   26.381893  \n",
-      "\n",
-      "[1 rows x 336 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "[x_data, y_data] = preprocess(\"data/10_greedy_ariana_grande.csv\")\n",
-    "extracted_features = parse(x_data, y_data)\n",
-    "print(extracted_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/paul/opt/miniconda3/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('peaches', 'justin_bieber')\n",
-      "Recommendations:\n",
-      "TRACK:  Skin  -  Sabrina Carpenter\n",
-      "TRACK:  Love Not War (The Tampa Beat)  -  Jason Derulo\n",
-      "TRACK:  Blueberry Eyes (feat. SUGA of BTS)  -  MAX\n",
-      "TRACK:  Up  -  Cardi B\n",
-      "TRACK:  By Yourself (feat. Jhené Aiko & Mustard)  -  Ty Dolla $ign\n"
-     ]
-    }
-   ],
-   "source": [
-    "def generate_classification_prediction(data):\n",
-    "    data = data.to_numpy()\n",
-    "    \n",
-    "    filename = 'classification_model.sav'\n",
-    "    model = pickle.load(open(filename, 'rb'))\n",
-    "    \n",
-    "    prediction = model.predict(data)\n",
-    "    print(song_artist_pairs[prediction[0]])\n",
-    "    artist_song = song_artist_pairs[prediction[0]]\n",
-    "    song = get_song(artist_song[0], artist_song[1])\n",
-    "\n",
-    "    show_recommendations_for_song(song)\n",
-    "    return\n",
-    "\n",
-    "predicted_song_number = generate_classification_prediction(extracted_features)"
-   ]
   }
  ],
  "metadata": {
