--- a/upsampling.ipynb
+++ b/upsampling.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook implements basic upsampling of data taken from ~15-20 second motion-tracked clips.\n",
+    "### It does so by splitting the clips into chunks and randomly perturbing the position data by small, normally-distributed increments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
